--- a/css/style.css
+++ b/css/style.css
@@ -816,9 +816,10 @@ header .navbar .custom-navbar-nav .nav-item .nav-link:hover {
 
 @media (max-width: 575.98px) {
   .road-map .rd-area .line {
-    height: 100%;
+    height: 95% !important;
     border-left: 6px solid #f3ff41;
     border-bottom: 0;
+    top: 0;
   }
 }
 
@@ -869,10 +870,10 @@ header .navbar .custom-navbar-nav .nav-item .nav-link:hover {
 
 @media (max-width: 575.98px) {
   .road-map .rd-area .rd-bx::before {
-    left: -27px;
+    left: -25px;
     top: 50%;
     height: 10px;
-    width: 51px;
+    width: 48px;
     z-index: 99;
     -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
