--- a/css/style.scss
+++ b/css/style.scss
@@ -548,9 +548,10 @@ header {
             left: 50%;
             transform: translate(-50%, 0%);
             @include xsm{
-                height: 100%;
+                height: 95% !important;
                 border-left: 6px solid #f3ff41;
                 border-bottom: 0;
+                top: 0;
             }
             @include sm{
                 height: 100%;
@@ -594,10 +595,10 @@ header {
                 transition: all 400ms cubic-bezier(0.29, 0.9, 0.26, 1);
                 z-index: -1;
                 @include xsm{
-                    left: -27px;
+                    left: -25px;
                     top: 50%;
                     height: 10px;
-                    width: 51px;
+                    width: 48px;
                     z-index: 99;
                     transform: translate(-50%, -50%);
                 }
